# ITCHNasdaqKafka

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  check_soup_increment.py  check_ts_type.py  conanfile.txt  extract_sym.py  get_sample_message.py  kafka-config.json  python_sdk_examples.ipynb  setup.py
ClientProgram/: zmq_kafka_consumer.py
ServerProgram/: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
cmake/: AddGitSubmodule.cmake  Docs.cmake
conan/: clang_mac  clang_ubuntu
configured/: config.hpp.in
lib/: CMakeLists.txt
lib/endianutil/: CMakeLists.txt  endianutil.cpp  endianutil.h  endianutil.inl
lib/libformat/: CMakeLists.txt  format.h
lib/misc/: CMakeLists.txt  misc.cpp  misc.h
lib/orderbook/: CMakeLists.txt  orderbook.cpp  orderbook.h
ncdssdk/docs/source/: conf.py  index.rst
ncdssdk/src/main/python/ncdsclient/internal/: ReadSchemaTopic.py
ncdssdk/src/main/python/ncdsclient/internal/utils/: ConsumerConfig.py  LoggingConfig.py  Oauth.py
ncdssdk/src/tests/unit-tests/: test_readSchemaResources.py
ncdssdk_client/: __init__.py
ncdssdk_client/src/main/python/resources/: kafka-config.json
python_parser/: check_itch_file_pair.py  live_n_historical_itch_check.ipynb  parse_trade_messages.py
template/: CMakeLists.txt  generate.py  mako_itch_specs_maker.py
template/cmake/: RootCMakeTemplate.txt  SubDirCMakeTemplate.txt
template/itch/: Message.h  Parser.h  Parser.inl  Processor.cpp  Processor.h
template/itch_specs/: TOTALVIEWITCH_schema.yaml
tests/: CMakeLists.txt  main.cpp
tests/nasdaq_kafka/: nasdaqkafkaTest.cpp  nasdaqkafkadataTest.cpp
